lib/flux/apps/ai/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: AI
    gethomepage.dev/name: SearXNG
    gethomepage.dev/description: Search
    gethomepage.dev/icon: searxng.png
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng
          port: 8080
